--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>My homepage</h1>
-    
+    <img src="./img/Lorna.png" alt="HTML5 logo" width="400" />
+    <h2>About my favorite band</h2>
+    <p>My favorite band is Lorna Shore. They are an American deathcore band.</p>
+    <h2>My favorite songs from them</h2>
+    <div>
+        <a href="https://www.youtube.com/watch?v=mK8mw2X-4ug">Sun//Eater</a>
+    </div>
+    <div>
+        <a href="https://www.youtube.com/watch?v=dOeFqRMX_10">Into The Earth</a>
+    </div>
+    <p>Download this document by clicking the hyperlink below.</p>
+    <a href="./documents/Doc1.docx">Test document</a>
 </body>
 </html>
